--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -6,7 +6,7 @@
             <i class="fa-brands fa-square-x-twitter"></i>
             <i class="fa-brands fa-square-linkedin"></i>
         </div>
-        <div>&copy; WanderLust Private Limited</div>
+        <div class="f-info-brand">&copy; WanderLust Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             <a href="/terms">Terms</a>
